fixed minor issues